sas-core/main/default/objects/MCENS_EnsEvent__e/MCENS_EnsEvent__e.object-meta.xml
<CustomObject>
    <description>Representation of an event from the Marketing Cloud Event Notification Service.</description>
    <label>ENS Event</label>
    <pluralLabel>ENS Events</pluralLabel>
</CustomObject>