sas-core/main/default/objects/MCENS_EnsEvent__e/fields/CompositeId__c.field-meta.xml
<CustomField>
    <fullName>CompositeId__c</fullName>
    <description>A composite id of the event from the event notification service.</description>
    <label>Composite Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>