sas-core/main/default/objects/MCENS_EnsEvent__e/fields/DefinitionKey__c.field-meta.xml
<CustomField>
    <fullName>DefinitionKey__c</fullName>
    <description>The name of the definition in marketing cloud to which the event relates.</description>
    <label>Definition Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>