sas-core/main/default/objects/MCENS_EnsEvent__e/fields/EId__c.field-meta.xml
<CustomField>
    <fullName>EId__c</fullName>
    <description>The enterprise id of the marketing cloud system to which the event relates.</description>
    <label>EId</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>