sas-core/main/default/objects/MCENS_EnsEvent__e/fields/Info__c.field-meta.xml
<CustomField>
    <fullName>Info__c</fullName>
    <description>The JSON data containing the information of the specific event.</description>
    <label>Info</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>