sas-core/main/default/objects/MCENS_EnsEvent__e/fields/MId__c.field-meta.xml
<CustomField>
    <fullName>MId__c</fullName>
    <description>The member id of the business unit to which the event relates.</description>
    <label>MId</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>