sas-core/main/default/objects/MCENS_EnsEvent__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>The timestamp of the event in milliseconds from UTC epoch.</description>
    <label>Timestamp</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>