sas-core/main/default/objects/MCENS_EnsEvent__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of the event.</description>
    <label>Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>